Fixed issue with gaps in press releases listing

--- a/django-verdant/rca/static/rca/css/modules.less
+++ b/django-verdant/rca/static/rca/css/modules.less
@@ -1783,3 +1783,17 @@ form .hidden-field{
         display:none !important;
     }
 }
+
+
+/*
+ * KH - This removes gaps in the press releases listing
+ */
+.press_release_listing {
+    .image {
+        height: 0;
+        margin-bottom: 56.25%;
+    }
+    .content {
+        height: 4em;
+    }
+}
